--- a/ProductFinder.Api/ProductFinder.Api.csproj
+++ b/ProductFinder.Api/ProductFinder.Api.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProductFinder.Contracts\ProductFinder.Contracts.csproj" />
     <ProjectReference Include="..\ProductFinder.Persistence\ProductFinder.Persistence.csproj" />
   </ItemGroup>
 
